--- a/index.html
+++ b/index.html
@@ -1,43 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Hadoop-hdfs by stevebovy</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="description" content="Hadoop-hdfs : Steve&#39;s Mirror of Apache Hadoop:  [ for LIBHDFS development ]">
 
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Hadoop-hdfs</title>
   </head>
+
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/stevebovy/hadoop-hdfs">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/stevebovy/hadoop-hdfs/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/stevebovy/hadoop-hdfs/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
 
-    <div class="wrapper">
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/stevebovy/hadoop-hdfs">View on GitHub</a>
 
-      <section>
-        <div id="title">
-          <h1>Hadoop-hdfs</h1>
-          <p>Steve&#39;s Mirror of Apache Hadoop (for libhdfs development)</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/stevebovy">stevebovy</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
+          <h1 id="project_title">Hadoop-hdfs</h1>
+          <h2 id="project_tagline">Steve&#39;s Mirror of Apache Hadoop:  [ for LIBHDFS development ]</h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/stevebovy/hadoop-hdfs/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/stevebovy/hadoop-hdfs/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a id="libhdfs" class="anchor" href="#libhdfs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>LIBHDFS</h1>
 
@@ -59,9 +52,17 @@
 
 <hr>
       </section>
-
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Hadoop-hdfs maintained by <a href="https://github.com/stevebovy">stevebovy</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
