--- a/index.html
+++ b/index.html
@@ -1,37 +1,53 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Hadoop-hdfs by stevebovy</title>
+    <meta name="viewport" content="width=640">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
+    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
     <link rel="stylesheet" href="stylesheets/github-light.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+
+    <script type="text/javascript" src="javascripts/modernizr.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#main_content').headsmart()
+      })
+    </script>
+    <title>Hadoop-hdfs by stevebovy</title>
   </head>
+
   <body>
-    <div class="wrapper">
+    <a id="forkme_banner" href="https://github.com/stevebovy/hadoop-hdfs">View on GitHub</a>
+    <div class="shell">
+
       <header>
-        <h1 class="header">Hadoop-hdfs</h1>
-        <p class="header">Steve&#39;s Mirror of Apache Hadoop:  [ FOR LIBHDFS development ]</p>
-
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/stevebovy/hadoop-hdfs/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/stevebovy/hadoop-hdfs/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/stevebovy/hadoop-hdfs">View On GitHub</a></li>
-        </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/stevebovy">stevebovy</a></p>
-
-
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <h1>Hadoop-hdfs</h1>
+            <h2>Steve&#39;s Mirror of Apache Hadoop:  [ FOR LIBHDFS development ]</h2>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
       </header>
-      <section>
+
+      <section id="downloads">
+        <span class="inner">
+          <a href="https://github.com/stevebovy/hadoop-hdfs/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/stevebovy/hadoop-hdfs/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+        </span>
+      </section>
+
+
+      <span class="banner-fix"></span>
+
+
+      <section id="main_content">
         <h1>
-<a id="libhdfs" class="anchor" href="#libhdfs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>LIBHDFS</h1>
+<a id="libhdfs" class="anchor" href="#libhdfs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>LIBHDFS:</h1>
 
 <h2>
 <a id="this-is-a-cjni-interface-to-the-hadoop-hdfs-file-system" class="anchor" href="#this-is-a-cjni-interface-to-the-hadoop-hdfs-file-system" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>This is a C/JNI Interface to the Hadoop HDFS file system.</h2>
@@ -39,7 +55,7 @@
 <hr>
 
 <h1>
-<a id="my-involvement" class="anchor" href="#my-involvement" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My Involvement</h1>
+<a id="my-involvement" class="anchor" href="#my-involvement" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My Involvement:</h1>
 
 <h2>
 <a id="i-became-involvedinterested-in-this-project-through-my-previous-employment-at-teradata" class="anchor" href="#i-became-involvedinterested-in-this-project-through-my-previous-employment-at-teradata" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>I became involved/interested in this project through my previous employment at Teradata.</h2>
@@ -47,18 +63,28 @@
 <hr>
 
 <h1>
-<a id="objectives" class="anchor" href="#objectives" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Objectives</h1>
+<a id="objectives" class="anchor" href="#objectives" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Objectives:</h1>
 
 <h2>
 <a id="i-hope-to-merge-many-of-my-teradata-enhancements-into-the-hadoop-hdfs-project" class="anchor" href="#i-hope-to-merge-many-of-my-teradata-enhancements-into-the-hadoop-hdfs-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>I hope to merge many of my Teradata enhancements into the Hadoop HDFS project.</h2>
 
 <hr>
       </section>
+
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>this project by <a href="https://github.com/stevebovy">stevebovy</a> can be found on <a href="https://github.com/stevebovy/hadoop-hdfs">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <span class="octocat"></span>
       </footer>
+
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+
+    
   </body>
 </html>
